--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
+  },
+  "proxy": {
+    "/auth/google": {
+      "target": "localhost:5000"
+    }
   }
 }
